--- a/app/views/cocktails/index.html.erb
+++ b/app/views/cocktails/index.html.erb
@@ -1,2 +1,8 @@
 <h1>Cocktails#index</h1>
 <p>Find me in app/views/cocktails/index.html.erb</p>
+
+<% @task.each do |cocktail| %>
+  <h2>
+    <%= link_to cocktail.name.capitalize, cocktail_path(cocktail) %>
+  </h2>
+<% end %>
