--- a/app/views/cocktails/show.html.erb
+++ b/app/views/cocktails/show.html.erb
@@ -1,2 +1,19 @@
-<h1>Cocktails#show</h1>
-<p>Find me in app/views/cocktails/show.html.erb</p>
+<div class="container">
+  <div class="row">
+    <div class="col-xs-12 col-sm-6 col-sm-offset-3">
+      <h1><%= @cocktail.name %></h1>
+
+      <% @doses.each do |d| %>
+        <%= d.description %>
+        <%= d.ingredient.name %>
+      <% end %>
+
+      <%= simple_form_for [@cocktail, @dose] do |f|%>
+        <%= f.input :description %>
+        <%= f.input :ingredient_id, collection: @ingredients %>
+        <%= f.submit "submit" %>
+      <% end %>
+      <%= link_to 'Back', cocktails_path %>
+    </div>
+  </div>
+</div>
